Refactors, work on custom name groups